# cortex

./: .env.example  .gitignore  .prettierignore  AUDIT.md  Anchor.toml  README.md  next.config.ts  package-lock.json  package.json  submission.md  tsconfig.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/agent/: AgentDashboard.tsx  CreateWalletModal.tsx  DepositModal.tsx  Modal.tsx  TxHistory.tsx  UpdateLimitsModal.tsx  WithdrawModal.tsx  page.tsx
app/api/faucet/devusdc/: route.ts
app/api/skills/cortex-search/: cortex.toml  route.ts
app/authors/[pubkey]/: page.tsx
app/components/: Nav.tsx  SkillCard.tsx  TemplateCard.tsx  providers.tsx
app/lib/: agent-keypair.ts  cortex.ts  featured.ts  wallet-cortex.ts
app/marketplace/: page.tsx
cli/: package.json
config/: demo.json
demo-agent/: package.json
demo-agent/src/: index.ts
docs/: MAINNET.md
programs/cortex_program/: Cargo.toml
programs/cortex_program/src/: lib.rs
scripts/: deactivate-skill.ts  mcp-server.ts  seed-devnet.ts  sync-idl.ts  tsconfig.json
scripts/lib/: keys.ts
sdk/: README.md  package.json
sdk/idl/: cortex_program.json  cortex_program.ts
sdk/src/: ai-sdk.ts  cortex-client.ts  cortex.ts  gateway.ts  idl.ts  index.ts  langchain.ts  mcp.ts  types.ts
tests/: cortex.test.ts  tsconfig.json
