[package]
name = "cortex-program"
version = "0.1.0"
description = "Cortex — Solana-native infrastructure for AI agents (programmable wallet + skill marketplace)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cortex_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
